Pic 3294 dynamic outcome count (#809)
* PIC-3294 display dynamic counts on outcome tabs

* PIC-3294 update and fix cypres tests

* PIC-3294 fix assign outcome cypres tests

* PIC-3294 fix dynamic count

--- a/server/views/outcomes/casesToResult.njk
+++ b/server/views/outcomes/casesToResult.njk
@@ -1,5 +1,4 @@
 {%- set moment = params.moment -%}
-{%- set displayFilters = params.casesToResultCount or params.filtersApplied -%}
 
 {% block javascripts %}
   {% if displayFilters %}
@@ -86,8 +85,7 @@
   {
     title: 'Resulted cases',
     a11yTitle: 'View resulted cases',
-    link: '/' + params.courtCode + '/outcomes/resulted-cases',
-    count: params.resultedCasesCount
+    link: '/' + params.courtCode + '/outcomes/resulted-cases'
   }
 ] -%}
 
