--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -1,6 +1,5 @@
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {%- set moment = params.moment -%}
-{%- set displayFilters = params.casesToResultCount or params.filtersApplied -%}
 
 {% block javascripts %}
   {% if displayFilters %}
@@ -94,8 +93,7 @@
   {
     title: 'Resulted cases',
     a11yTitle: 'View resulted cases',
-    link: '/' + params.courtCode + '/outcomes/resulted-cases',
-    count: params.resultedCasesCount
+    link: '/' + params.courtCode + '/outcomes/resulted-cases'
   }
 ] -%}
 
