--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -86,8 +86,7 @@
     title: 'Resulted cases',
     a11yTitle: 'View resulted cases',
     link: '/' + params.courtCode + '/outcomes/resulted-cases',
-    current: true,
-    count: params.resultedCasesCount
+    current: true
   }
 ] -%}
 
