--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -6,11 +6,13 @@
     <script type="text/javascript" src="/javascripts/hearing-outcomes-date-sort-component-{{ appVersion }}.min.js"></script>
     <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
   {% endif %}
+  <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
 {% endblock %}
 
 {% set tableData = {
   attributes: {
-    'data-module': 'moj-sortable-table'
+    'data-module': 'moj-sortable-table',
+    'id': 'hearing-outcome-resulted'
   },
   head:
   [
@@ -56,7 +58,7 @@
   {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
   {% set assignedToCurrentUser = currentUserUuid === item.assignedToUuid %}
   {%- set tableRow = [
-    { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state" aria-label="' + a11yTitle + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
+    { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state pac-reassign-resulted" aria-label="' + a11yTitle + '" data-hearingid="' + item.hearingId + '" data-defendantid="' + item.defendantId + '" data-courtcode="' + params.courtCode + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
     { text: item.hearingOutcomeDescription | safe },
     { html: '<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + '</div>' +
             (item.probationStatus | string | capitalize if not notMatched) },
@@ -110,6 +112,8 @@
       hiddenInputs: params.sorts
     }) }}
   {% endif %}
+
+  {% include "court-case-progress-reassign-resulted-modal.njk" %}
 
   {% if tableData.rows | length %}
     {% block table %}
