added bootstrap modals and functionality to edit hearing outcome

--- a/server/views/case-list.njk
+++ b/server/views/case-list.njk
@@ -3,7 +3,7 @@
 
 {% block javascripts %}
     {% if displayFilters %}
-        <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"/>
+        <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
     {% endif %}
 {% endblock %}
 
