--- a/public/stylesheets/app/_case-progress-card.scss
+++ b/public/stylesheets/app/_case-progress-card.scss
@@ -1,6 +1,13 @@
 .app-summary-card {
   border: 1px solid $govuk-border-colour;
 
+  .app-summary-card__banner {
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+  }
+
   /* Card header */
   .app-summary-card__header {
     align-items: center;
