--- a/server/views/court-case-progress-hearing-outcome-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-modal.njk
@@ -1,45 +1,89 @@
-<div id="add-hearing-outcome-modal" class="modal-container">
-    <div class="modal-content govuk-!-padding-2">
-        <button class="modal-close govuk-!-font-size-16">X</button>
-        <div class="modal-body govuk-grid-row">
-            <div class="govuk-grid-column-full govuk-!-margin-bottom-5">
-                <form id="hearing-outcome-form-row" method="post" action="summary/add-hearing-outcome">
-                    <p class="govuk-heading-m hearing-outcome-modal-error govuk-error-message govuk-!-display-none">
-                        Choose an outcome type for this hearing before sending to admin
-                    </p>
-                    <p class="govuk-heading-m govuk-!-text-align-centre">
-                        Choose an outcome and send this case to admin</p>
-                    <div class="govuk-button-group govuk-!-padding-top-5 add-outcome-button-group">
-                        <select class="govuk-select"
-                                id="hearing-outcome-type"
-                                name="hearingOutcomeType">
-                            <option class="NOT_SELECTED" value="NOT_SELECTED">Outcome type
-                            </option>
-                            <option class="PROBATION_SENTENCE" value="PROBATION_SENTENCE">
-                                Probation sentence
-                            </option>
-                            <option class="NON_PROBATION_SENTENCE"
-                                    value="NON_PROBATION_SENTENCE">Non-probation sentence
-                            </option>
-                            <option class="REPORT_REQUESTED" value="REPORT_REQUESTED">Report requested
-                            </option>
-                            <option class="ADJOURNED" value="ADJOURNED">Adjourned</option>
-                            <option class="COMMITTED_TO_CROWN" value="COMMITTED_TO_CROWN">
-                                Committed to Crown
-                            </option>
-                            <option class="CROWN_PLUS_PSR" value="CROWN_PLUS_PSR">Crown plus PSR
-                            </option>
-                            <option class="OTHER" value="OTHER">Other</option>
-                        </select>
-                        <input type="hidden" name="targetHearingId" id="targetHearingId"
-                               value=""/>
-                        <button type="submit" id="send-outcome-to-admin"
-                                class="govuk-button govuk-!-margin-left-3"
-                                data-module="govuk-button">Send to admin
-                        </button>
-                    </div>
-                </form>
+<div id="add-hearing-outcome-modal" class="modal outcome" tabindex="-1" aria-labelledby="add-hearing-outcome-modal-label" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <p class="modal-title govuk-heading-m">Add Outcome</p>
+                <button type="button" class="btn-close govuk-!-font-size-16" data-bs-dismiss="modal" aria-label="Close">X</button>
             </div>
+
+            <form method="post" action="summary/add-hearing-outcome">
+                <input type="hidden" name="targetHearingId" value=""/>
+                <div class="modal-body">
+                    <div class="modal-error-wrapper">
+                        <p class="govuk-heading-m hearing-outcome-modal-error govuk-error-message govuk-!-display-none">
+                            Choose an outcome type for this hearing before sending to admin
+                        </p>
+                        <div class="govuk-button-group govuk-!-padding-top-5 add-outcome-button-group">
+                            {% for outcomeType in outcomeTypes %}
+                                <label class="" for="add-{{ outcomeType.id }}">You can choose an outcome and send this case to admin</label>
+                                <select id="add-{{ outcomeType.id }}" name="hearingOutcomeType" class="govuk-select govuk-!-width-full govuk-!-margin-bottom-3">
+                                    <option value="">Select an outcome type</option>
+                                    {% for option in outcomeType.items %}
+                                        <option value="{{ option.value }}">{{ option.label }}</option>
+                                    {% endfor %}
+                                </select>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="govuk-button govuk-button--secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="submit" id="send-outcome-to-admin"
+                            class="govuk-button govuk-!-margin-left-3"
+                            data-module="govuk-button">Send to admin
+                    </button>
+                </div>
+            </form>
+
         </div>
     </div>
 </div>
+
+
+
+
+{#    <div class="modal-content govuk-!-padding-2">#}
+{#        <button class="modal-close govuk-!-font-size-16">X</button>#}
+{#        <div class="modal-body govuk-grid-row">#}
+{#            <div class="govuk-grid-column-full govuk-!-margin-bottom-5">#}
+{#                <form id="hearing-outcome-form-row" method="post" action="summary/add-hearing-outcome">#}
+{#                    <p class="govuk-heading-m hearing-outcome-modal-error govuk-error-message govuk-!-display-none">#}
+{#                        Choose an outcome type for this hearing before sending to admin#}
+{#                    </p>#}
+{#                    <p class="govuk-heading-m govuk-!-text-align-centre">#}
+{#                        Choose an outcome and send this case to admin</p>#}
+{#                    <div class="govuk-button-group govuk-!-padding-top-5 add-outcome-button-group">#}
+{#                        <select class="govuk-select"#}
+{#                                id="hearing-outcome-type"#}
+{#                                name="hearingOutcomeType">#}
+{#                            <option class="NOT_SELECTED" value="NOT_SELECTED">Outcome type#}
+{#                            </option>#}
+{#                            <option class="PROBATION_SENTENCE" value="PROBATION_SENTENCE">#}
+{#                                Probation sentence#}
+{#                            </option>#}
+{#                            <option class="NON_PROBATION_SENTENCE"#}
+{#                                    value="NON_PROBATION_SENTENCE">Non-probation sentence#}
+{#                            </option>#}
+{#                            <option class="REPORT_REQUESTED" value="REPORT_REQUESTED">Report requested#}
+{#                            </option>#}
+{#                            <option class="ADJOURNED" value="ADJOURNED">Adjourned</option>#}
+{#                            <option class="COMMITTED_TO_CROWN" value="COMMITTED_TO_CROWN">#}
+{#                                Committed to Crown#}
+{#                            </option>#}
+{#                            <option class="CROWN_PLUS_PSR" value="CROWN_PLUS_PSR">Crown plus PSR#}
+{#                            </option>#}
+{#                            <option class="OTHER" value="OTHER">Other</option>#}
+{#                        </select>#}
+{#                        <input type="hidden" name="targetHearingId" id="targetHearingId"#}
+{#                               value=""/>#}
+{#                        <button type="submit" id="send-outcome-to-admin"#}
+{#                                class="govuk-button govuk-!-margin-left-3"#}
+{#                                data-module="govuk-button">Send to admin#}
+{#                        </button>#}
+{#                    </div>#}
+{#                </form>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
