added bootstrap modals and functionality to edit hearing outcome

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -3,6 +3,7 @@
         <h2 class="govuk-heading-m" id="caseHearingsHeading">Case progress</h2>
         {% if features.hearingOutcomesEnabled %}
             {% include "court-case-progress-hearing-outcome-modal.njk" %}
+            {% include "court-case-progress-hearing-outcome-edit-modal.njk" %}
         {% endif %}
         {% if data.hearings | length %}
             {% if session.showPreviousHearings === data.caseId %}
@@ -17,11 +18,13 @@
                     {% if features.hearingOutcomesEnabled and hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
                         <div class="govuk-grid-row">
                             <div class="govuk-grid-column-full">
-                                <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2">
-                                    <span class="govuk-notification-banner__title govuk-!-font-size-16">{{ hearing.hearingOutcome.hearingOutcomeDescription }}</span>
-                                    <span class="govuk-notification-banner__title govuk-!-font-size-16 hearing-outcome-display-date govuk-!-padding-left-2">Sent to admin on {{ hearing.hearingOutcome.outcomeDate | hearingNoteTimeFormat }}</span>
-                                    {% if hearing.hearingOutcome.state !== 'RESULTED' %}
-                                        <a href="#" class="govuk-notification-banner__title govuk-!-font-size-16 hearing-outcome-edit govuk-!-padding-left-2" data-hearingOutcome="{{ hearing.hearingOutcome | stringify | safe }}">Edit</a>
+                                <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2 app-summary-card__banner">
+                                    <div>
+                                        <span class="govuk-notification-banner__title govuk-!-font-size-16">{{ hearing.hearingOutcome.hearingOutcomeDescription }}</span>
+                                        <span class="govuk-notification-banner__title govuk-!-font-size-16 hearing-outcome-display-date govuk-!-padding-left-2">Sent to admin on {{ hearing.hearingOutcome.outcomeDate | hearingNoteTimeFormat }}</span>
+                                    </div>
+                                    {% if hearing.hearingOutcome.state !== 'RESULTED' and hearing.hearingOutcome.state !== '' %}
+                                        <a href="#" class="govuk-notification-banner__title govuk-!-font-size-16 hearing-outcome-edit govuk-!-padding-left-2" data-bs-toggle="modal" data-bs-target="#{{ "add" if hearing.hearingOutcome.state === 'NEW' else "edit" }}-hearing-outcome-modal" data-hearingid="{{ hearing.hearingId }}">Edit</a>
                                     {% endif %}
                                 </div>
                             </div>
@@ -48,7 +51,7 @@
                                 {% if showAddHearingOutcomeButton %}
                                     <div class="govuk-grid-column-one-third">
                                         <button class="govuk-button btn-send-hearing-outcome govuk-!-margin-bottom-0"
-                                                data-hearingid="{{ hearing.hearingId }}" data-module="govuk-button">Send outcome to admin
+                                                data-hearingid="{{ hearing.hearingId }}" data-module="govuk-button" data-bs-toggle="modal" data-bs-target="#add-hearing-outcome-modal">Send outcome to admin
                                         </button>
                                     </div>
                                 {% endif %}
