--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -14,7 +14,7 @@
             {% for hearing in data.hearings | limit(limitPreviousHearings) %}
                 <div class="app-summary-card govuk-!-margin-bottom-5"
                      id="case-progress-hearing-{{ hearing.hearingId }}">
-                    {% if hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
+                    {% if features.hearingOutcomesEnabled and hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
                         <div class="govuk-grid-row">
                             <div class="govuk-grid-column-full">
                                 <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2">
