Pic 3359 fix feature toggling (#814)
* PIC-3359 grant hearing outcomes access to PIC team in preprod

* PIC-3359 fix hearing outcomes feature toggle

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -145,7 +145,7 @@
         active: title === 'Case list'
     }] %}
 
-    {%- if hearingOutcomesEnabled %}
+    {%- if params.hearingOutcomesEnabled %}
         {% set navItems = (navItems.push({
             text: 'Outcomes',
             href: '/' + params.courtCode + '/outcomes',
