--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row" id="caseProgressComponent">
     <div class="govuk-grid-column-two-thirds">
         <h2 class="govuk-heading-m" id="caseHearingsHeading">Case progress</h2>
-        {% if hearingOutcomes %}
+        {% if features.hearingOutcomesEnabled %}
             {% include "court-case-progress-hearing-outcome-modal.njk" %}
         {% endif %}
         {% if data.hearings | length %}
@@ -14,7 +14,7 @@
             {% for hearing in data.hearings | limit(limitPreviousHearings) %}
                 <div class="app-summary-card govuk-!-margin-bottom-5"
                      id="case-progress-hearing-{{ hearing.hearingId }}">
-                    {% if hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
+                    {% if features.hearingOutcomesEnabled and hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
                         <div class="govuk-grid-row">
                             <div class="govuk-grid-column-full">
                                 <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2">
@@ -34,7 +34,7 @@
                                     {% endif %}
                                 </div>
                             </div>
-                            {% set showAddHearingOutcomeButton = hearingOutcomes and hearing.notes and hearing.notes | length and not hearing.hearingOutcome.hearingOutcomeType %}
+                            {% set showAddHearingOutcomeButton = features.hearingOutcomesEnabled and hearing.notes and hearing.notes | length and not hearing.hearingOutcome.hearingOutcomeType %}
 
                             <div class="govuk-grid-row">
                                 <div class="{{ "govuk-grid-column-two-thirds" if showAddHearingOutcomeButton else "govuk-grid-column-full" }}">
