--- a/public/stylesheets/app/all.scss
+++ b/public/stylesheets/app/all.scss
@@ -1,5 +1,4 @@
-//@import "bootstrap-modal";
-@import "bootstrap-modal-default";
+@import "bootstrap-modal";
 @import "overrides";
 @import "badge";
 @import "filter";
