--- a/server/views/court-case-progress-hearing-outcome-edit-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-edit-modal.njk
@@ -1,42 +1,47 @@
+{% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
+{% from "govuk/components/select/macro.njk" import govukSelect %}
 <div class="modal outcome" id="edit-hearing-outcome-modal" tabindex="-1" aria-labelledby="edit-hearing-outcome-modal-label" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
 
             <div class="modal-header">
-                <p class="modal-title govuk-heading-m">Edit Outcome</p>
+                {{ govukWarningText({
+                    html: '<span class="govuk-heading-m govuk-!-margin-bottom-0">This case is already being resulted</span>',
+                    iconFallbackText: 'Warning',
+                    classes: 'govuk-!-margin-bottom-0 govuk-heading-m'
+                }) }}
                 <button type="button" class="btn-close govuk-!-font-size-16" data-bs-dismiss="modal" aria-label="Close">X</button>
             </div>
 
             <form method="post" action="summary/edit-hearing-outcome">
                 <input type="hidden" name="targetHearingId" value=""/>
                 <div class="modal-body">
-                    <p class="modal-title govuk-heading-m">This case is already being resulted</p>
-                    <div class="modal-error-wrapper">
-                        <p class="govuk-heading-m hearing-outcome-modal-error govuk-error-message govuk-!-display-none">
-                            Choose an outcome type for this hearing before sending to admin
-                        </p>
-                        <p class="govuk-body-m govuk-!-text-align-centre" id="edit-hearing-outcome-modal-label">
-                            This case is in progress on the outcomes page, which means an admin might already be resulting it based on the original outcome type you selected
-                        </p>
-                    <div class="govuk-button-group govuk-!-padding-top-5 add-outcome-button-group">
-                            {% for outcomeType in outcomeTypes %}
-                                <label class="" for="edit-{{ outcomeType.id }}">You can choose an outcome and send this case to admin</label>
-                                <select id="edit-{{ outcomeType.id }}" name="hearingOutcomeType" class="govuk-select govuk-!-width-full govuk-!-margin-bottom-3">
-                                    <option value="">Select an outcome type</option>
-                                    {% for option in outcomeType.items %}
-                                        <option value="{{ option.value }}">{{ option.label }}</option>
-                                    {% endfor %}
-                                </select>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
+                    <p class="govuk-body-m" id="edit-hearing-outcome-modal-label">
+                        This case is in progress on the outcomes page, which means an admin might already be resulting it based on the original outcome type you selected
+                    </p>
+                    {{ govukSelect({
+                        id: 'editHearingOutcomeType',
+                        name: 'hearingOutcomeType',
+                        label: {
+                            text: 'You can choose an outcome and resend this case to admin',
+                            classes: 'govuk-label--s govuk-!-margin-bottom-3'
+                        },
+                        errorMessage: {
+                            text: 'Choose an outcome type for this hearing before sending to admin'
+                        },
+                        items: outcomeTypes
+                    }) }}
+                    <p class="govuk-heading-s">
+                        Now you should:
+                    </p>
 
-                <div class="modal-footer">
-                    <button type="button" class="govuk-button govuk-button--secondary" data-bs-dismiss="modal">Close</button>
+                    <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-1">
+                        <li>find out which admin is resulting this case by filtering the in progress tab on the outcomes page</li>
+                        <li>contact them to tell them the outcome type has changed.</li>
+                    </ul>
                     <button type="submit" id="send-outcome-to-admin"
-                            class="govuk-button govuk-!-margin-left-3"
-                            data-module="govuk-button">Send to admin
+                            class="govuk-button govuk-!-margin-bottom-0"
+                            data-module="govuk-button">Update outcome
                     </button>
                 </div>
             </form>
