added integration tests

--- a/server/views/court-case-progress-hearing-outcome-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-modal.njk
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title govuk-heading-m" id="add-hearing-outcome-modal-label">Choose an outcome and send this case to admin</h2>
+                <p class="modal-title govuk-heading-m" id="add-hearing-outcome-modal-label">Choose an outcome and send this case to admin</p>
                 <button type="button" class="btn-close govuk-!-font-size-16" data-bs-dismiss="modal" aria-label="Close">X</button>
             </div>
 
