fixed integration tests

--- a/server/views/court-case-progress-hearing-outcome-edit-modal.njk
+++ b/server/views/court-case-progress-hearing-outcome-edit-modal.njk
@@ -39,7 +39,7 @@
                         <li>find out which admin is resulting this case by filtering the in progress tab on the outcomes page</li>
                         <li>contact them to tell them the outcome type has changed.</li>
                     </ul>
-                    <button type="submit" id="send-outcome-to-admin"
+                    <button type="submit" id="update-outcome"
                             class="govuk-button govuk-!-margin-bottom-0"
                             data-module="govuk-button">Update outcome
                     </button>
