--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -224,6 +224,7 @@
         });
       }
     </script>
+    <script src="/javascripts/external-{{ appVersion }}.min.js"></script>
     {% endif %}
 {% endblock %}
 
