PIC-3357: attempt to fix broken int tests

--- a/server/views/court-case-progress-assign-modal.njk
+++ b/server/views/court-case-progress-assign-modal.njk
@@ -3,7 +3,7 @@
         <div class="modal-content">
 
             <div class="modal-header">
-                <p class="modal-title govuk-heading-m" id="assign-outcome-modal-label">Do you want to result this case now?</p>
+                <h2 class="modal-title govuk-heading-m" id="assign-outcome-modal-label">Do you want to result this case now?</h2>
                 <button type="button" class="btn-close govuk-!-font-size-16" data-bs-dismiss="modal" aria-label="Close">X</button>
             </div>
 
