--- a/server/views/court-case-progress-reassign-resulted-modal.njk
+++ b/server/views/court-case-progress-reassign-resulted-modal.njk
@@ -1,9 +1,9 @@
-<div class="modal assign-outcome" id="reassign-resulted-outcome-modal"  tabindex="-1" aria-labelledby="reassign-outcome-modal-label" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+<div class="modal assign-outcome" id="reassign-resulted-outcome-modal"  tabindex="-1" aria-labelledby="reassign-outcome-modal-label" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false" data-cy="reassign-resulted-outcome-modal">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content" role="document">
 
             <div class="modal-header">
-                <p class="modal-title govuk-heading-m" id="reassign-outcome-modal-label">This case has been resulted</p>
+                <h2 class="modal-title govuk-heading-m" id="reassign-outcome-modal-label">This case has been resulted</h2>
                 <button type="button" class="btn-close govuk-!-font-size-16" data-bs-dismiss="modal" aria-label="Close">X</button>
             </div>
 
