--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="/javascripts/hearing-outcomes-date-sort-component-{{ appVersion }}.min.js"></script>
     <script type="text/javascript" src="/javascripts/filter-component-{{ appVersion }}.min.js"></script>
   {% endif %}
-  <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"/>
+  <script type="text/javascript" src="/javascripts/case-progress-{{ appVersion }}.min.js"></script>
 {% endblock %}
 
 {% set tableData = {
@@ -58,7 +58,7 @@
   {% set crnDisplay = '<div class="pac-secondary-text govuk-body-s govuk-!-margin-top-1">' + item.crn if item.crn else '' + '</div>' %}
   {% set assignedToCurrentUser = currentUserUuid === item.assignedToUuid %}
   {%- set tableRow = [
-    { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state pac-reassign-resulted" aria-label="' + a11yTitle + '" data-hearingid="' + item.hearingId + '" data-defendantid="' + item.defendantId + '" data-courtcode="' + params.courtCode + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
+    { text: ('<a href="/' + params.courtCode + '/hearing/' + item.hearingId + '/defendant/' + item.defendantId + '/summary" class="pac-defendant-link govuk-!-font-weight-bold govuk-link govuk-link--no-visited-state pac-reassign-resulted" data-bs-toggle="modal" data-bs-target="#reassign-resulted-outcome-modal" aria-label="' + a11yTitle + '" data-hearingid="' + item.hearingId + '" data-defendantid="' + item.defendantId + '" data-courtcode="' + params.courtCode + '">' + defendantFullName | escape | apostropheInName | properCase | removeTitle + '</a>' + crnDisplay ) | safe },
     { text: item.hearingOutcomeDescription | safe },
     { html: '<div>' + ('<span class="moj-badge moj-badge--red pac-badge">Possible NDelius Record</span>' | safe if notMatched ) + '</div>' +
             (item.probationStatus | string | capitalize if not notMatched) },
