--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -120,7 +120,7 @@
       {{ govukTable(tableData) }}
     {% endblock %}
   {% else %}
-    <p class="govuk-body">{{ "There are no cases that match these criteria" }}</p>
+    <p class="govuk-body">{{ "There are no cases to be resulted." }}</p>
   {% endif %}
 
 {% endblock %}
