--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -141,7 +141,7 @@
   {% if params.filtersApplied %}
       <span class="govuk-heading-m">0 cases</span>
     {% endif %}
-    <p class="govuk-body">{{ "There are no cases that match these criteria." if params.filtersApplied else "There are no cases being resulted." }}</p>
+    <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "There are no cases in progress." }}</p>
   {% endif %}
 
 {% endblock %}
