--- a/server/views/outcomes/resultedCases.njk
+++ b/server/views/outcomes/resultedCases.njk
@@ -120,7 +120,10 @@
       {{ govukTable(tableData) }}
     {% endblock %}
   {% else %}
-    <p class="govuk-body">{{ "There are no resulted cases." }}</p>
+    {% if params.filtersApplied %}
+      <span class="govuk-heading-m">0 cases</span>
+    {% endif %}
+    <p class="govuk-body">{{ "There are no matching cases." if params.filtersApplied else "There are no resulted cases." }}</p>
   {% endif %}
 
 {% endblock %}
