PIC-3036: integration tests and updated notice warning

--- a/server/views/set-notification.njk
+++ b/server/views/set-notification.njk
@@ -31,7 +31,7 @@
         name: "notification",
         value: currentNotification,
           errorMessage: {
-            html: "<span id='notification-error-text'></span>"
+            html: "FIX THE ERROR MESSAGE BELOW.<br /><span class='govuk-!-font-size-16'>Once this is done you will be able to click the submit button.</span><br /><br /><span id='notification-error-text'></span>"
           }
       }) }}
 
