--- a/server/views/outcomes/casesInProgress.njk
+++ b/server/views/outcomes/casesInProgress.njk
@@ -137,6 +137,7 @@
       {%- from "govuk/components/table/macro.njk" import govukTable -%}
       {{ govukTable(tableData) }}
     {% endblock %}
+    {% include "outcomes/outcomes-paging-partial.njk" %}
   {% else %}
   {% if params.filtersApplied %}
       <span class="govuk-heading-m">0 cases</span>
