--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -15,7 +15,7 @@
             {% for hearing in data.hearings | limit(limitPreviousHearings) %}
                 <div class="app-summary-card govuk-!-margin-bottom-5"
                      id="case-progress-hearing-{{ hearing.hearingId }}">
-                    {% if features.hearingOutcomesEnabled and hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType %}
+                    {% if features.hearingOutcomesEnabled and hearing.hearingOutcome and hearing.hearingOutcome.hearingOutcomeType and hearing.hearingOutcome.hearingOutcomeType != 'NO_OUTCOME' %}
                         <div class="govuk-grid-row">
                             <div class="govuk-grid-column-full">
                                 <div class="govuk-grid-column-full govuk-notification-banner--success govuk-notification-banner__header govuk-!-padding-left-3 govuk-!-padding-top-2 govuk-!-padding-bottom-2 app-summary-card__banner">
@@ -40,7 +40,7 @@
                                     {% endif %}
                                 </div>
                             </div>
-                            {% set showAddHearingOutcomeButton = features.hearingOutcomesEnabled and hearing.notes and hearing.notes | length and not hearing.hearingOutcome.hearingOutcomeType %}
+                            {% set showAddHearingOutcomeButton = features.hearingOutcomesEnabled and hearing.notes and hearing.notes | length and (not hearing.hearingOutcome.hearingOutcomeType or hearing.hearingOutcome.hearingOutcomeType === 'NO_OUTCOME') %}
 
                             <div class="govuk-grid-row">
                                 <div class="{{ "govuk-grid-column-two-thirds" if showAddHearingOutcomeButton else "govuk-grid-column-full" }}">
